# apollo_rock_thin_section_classifier

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  LICENSE  README.md  index.html  makefile  mkdocs.yaml  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
1_binary_classifier/notebooks/: augmentation.ipynb  grad_cam.ipynb
1_binary_classifier/scripts/: train_SimCLR.py  train_binary_model.py
api/apollo_rock_thin_section_classifier/: index.html
api/apollo_rock_thin_section_classifier/data_management/: index.html
api/apollo_rock_thin_section_classifier/data_management/lbl_parser/: index.html
api/apollo_rock_thin_section_classifier/data_management/msm_statistics_combined/: index.html
api/apollo_rock_thin_section_classifier/data_management/preprocessing_datasets/: index.html
api/apollo_rock_thin_section_classifier/data_management/preprocessing_images/: index.html
api/apollo_rock_thin_section_classifier/data_management/process/: index.html
api/apollo_rock_thin_section_classifier/data_management/processing_combined/: index.html
api/apollo_rock_thin_section_classifier/data_management/sample_downloader/: index.html
api/apollo_rock_thin_section_classifier/data_management/scrape_microscope_info/: index.html
api/apollo_rock_thin_section_classifier/data_management/utils/: index.html
api/apollo_rock_thin_section_classifier/plotting/: index.html
api/apollo_rock_thin_section_classifier/plotting/augmentation/: index.html
api/apollo_rock_thin_section_classifier/plotting/create_figures/: index.html
data/: full_database_tree  pds_data.msm
notebooks/: augmentation.ipynb
search/: search_index.json
src/apollo_petro_ai/: __init__.py
src/apollo_petro_ai/data_management/: __init__.py  lbl_parser.py  msm_statistics_combined.py  preprocessing_datasets.py  preprocessing_images.py  processing_combined.py  sample_downloader.py  scrape_microscope_info.py  utils.py
src/apollo_petro_ai/data_management/process/: preprocessing_helper.py
src/apollo_petro_ai/machine_learning/network/: Network.py  architecture.py  network_utils.py  (+3 more)
src/apollo_petro_ai/plotting/: augmentation.py  create_figures.py
src/apollo_rock_thin_section_classifier/: index.html
src/apollo_rock_thin_section_classifier/data_management/: index.html
src/apollo_rock_thin_section_classifier/plotting/: index.html
src/scripts/: main.py
src/scripts/binary_classifier/: train_SimCLR.py  train_binary_model.py
src/thin_section_rock_analysis/: __init__.py
src/thin_section_rock_analysis/data_management/: __init__.py  preprocessing_datasets.py
src/thin_section_rock_analysis/plotting/: augmentation.py  create_figures.py
(+16 files in other folders)
